[package]
name = "afterburner-app"
version = "0.1.0"
edition.workspace = true

[dependencies]
# Core
aya = { workspace = true }
aya-log = { workspace = true }
afterburner-common = { workspace = true }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true, features = ["full"] }
signal-hook = { workspace = true }

# QUIC Stack 
quiche = { workspace = true }
ring = { workspace = true }

# Test Server Tools
quinn = { workspace = true }
rustls = { workspace = true, features = ["ring", "std", "logging", "tls12"] } 
rcgen = { workspace = true } 
rustls-pki-types = { workspace = true }